--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,9 @@
   <groupId>HelloWorld</groupId>
   <artifactId>Hello1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  <sonar.organization>harshametla</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
 </project>
+
