--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,31 +7,17 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  depchecktest:
+  job_1:
+    name: building nmap image and pushing into repository
     runs-on: ubuntu-latest
-    name: depecheck_test
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v4.2
-        with:
-         maven-version: 3.8.2
-      - name: Maven
-        run: mvn clean package -f pom.xml
-     
-      - name: Depcheck
-        uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
-        with:
-          project: 'test'
-          path: '.'
-          format: 'HTML'    
-          args: >
-            --failOnCVSS 7
-            --enableRetired
-      - name: Upload Test results
-        uses: actions/upload-artifact@master
-        with:
-           name: Depcheck report
-           path: ${{github.workspace}}/reports
+    - uses: actions/checkout@v2
+    - name: Build the Docker image of namp
+      run: docker build -t nmapimage .
+    - name: uploading12345
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: harshametla/docker_image
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
