--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -91,3 +91,11 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+  job_4:
+    name: deploying
+    needs: job_2
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: uploading 
+      run: kubectl creat -f kubernets/my.yml
