--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -93,9 +93,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
   job_4:
     name: deploying
-    needs: job_2
+    needs: job_1
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: uploading 
-      run: kubectl creat -f kubernets/my.yml
+      run: kubectl create -f kubernets/my.yml
