--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -92,7 +92,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
   job_4:
-    name: Uploading
+    name: Uploading1
     needs: job_1
     runs-on: ubuntu-latest
     steps:
