--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -91,19 +91,26 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-  job_4:
-    name: Uploading1
+  deploy:
     needs: job_1
     runs-on: ubuntu-latest
+
     steps:
-    - uses: jtalk/k8s-deploy@v2
+    - name: Checkout source code
+      uses: actions/checkout@v2
+
+    - name: Generate deployment package
+      run: zip -r deploy.zip . -x '*.git*'
+
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v20
       with:
-        namespace: 'myapp'
-        manifests: |
-            deployment.yaml
-            service.yaml
-        images: 'harshametla/new'
-        imagepullsecrets: |
-          image-pull-secret1
-          image-pull-secret2
-        kubectl-version: 'latest'
+      
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: django-github-actions-aws
+        environment_name: django-github-actions-aws
+        version_label: 12348
+        region: "us-east-2"
+        deployment_package: deploy.zip
+
