--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -101,16 +101,20 @@ jobs:
 
     - name: Generate deployment package
       run: zip -r deploy.zip . -x '*.git*'
+  deploy2:
+    needs: [deploy]
+    runs-on: ubuntu-latest
 
+    steps: 
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v20
       with:
       
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: django-github-actions-aws
-        environment_name: django-github-actions-aws
+        application_name: j
+        environment_name: jj
         version_label: 12348
-        region: "us-east-2"
+        region: "ap-south-1"
         deployment_package: deploy.zip
 
