--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -112,8 +112,8 @@ jobs:
       
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: j
-        environment_name: jj
+        application_name: Hello1
+        environment_name: Hello1-env
         version_label: 12348
         region: "ap-south-1"
         deployment_package: deploy.zip
