--- a/.ebextensions/eb.config
+++ b/.ebextensions/eb.config
@@ -1,3 +1,4 @@
 option_settings:
   aws:elasticbeanstalk:container:java:
-    WSGIPath: Hello1.wsgi:application
+    WSGIPath: 
+  Hello1.wsgi:application
