--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -108,7 +108,7 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: Hello1
-        environment_name: Hello1-env
+        environment_name: Hello1-env-1
         version_label: 123489
         region: "ap-south-1"
         deployment_package: deploy.zip
